--- a/src/app/domains/info/pages/about/about.component.html
+++ b/src/app/domains/info/pages/about/about.component.html
@@ -1,8 +1,8 @@
 <div>
-  <h1 class="text-lg font-bold">About</h1>
+  <h1 class="text-lg font-bold" appHighlight>About</h1>
   <p class="text-base">
     Lorem ipsum dolor
-    <span highlight>sit amet consectetur adipisicing elit.</span> Facere vel
+    <span appHighlight>sit amet consectetur adipisicing elit.</span> Facere vel
     delectus numquam aliquid itaque nulla. Alias fugiat est, voluptatem commodi
     soluta, ad et eveniet odit rem perferendis porro, quidem iste.
   </p>
@@ -12,7 +12,4 @@
       <app-counter [duration]="duration()" [message]="message()" />
     }
   </p>
-  <div>
-    <app-wave-audio audioUrl="assets/audio.mp3" />
-  </div>
 </div>
