--- a/src/app/domains/info/pages/about/about.component.html
+++ b/src/app/domains/info/pages/about/about.component.html
@@ -1,16 +1,24 @@
 <div>
   <h1 class="text-lg font-bold" appHighlight>About</h1>
+
   <p class="text-base">
     Lorem ipsum dolor
-    <span appHighlight>sit amet consectetur adipisicing elit.</span> Facere vel
-    delectus numquam aliquid itaque nulla. Alias fugiat est, voluptatem commodi
-    soluta, ad et eveniet odit rem perferendis porro, quidem iste.
+    <span appHighlight>sit amet consectetur adipisicing elit.</span>
+    Facere vel delectus numquam aliquid itaque nulla.
   </p>
-  <p class="text-base">Numero de clientes</p>
+
+  <p class="text-base">Número de clientes</p>
+
   <p>
-    <input [(ngModel)]="duration" type="ranger" min="0" max="1000" />
+    <input
+      [ngModel]="duration()"
+      (ngModelChange)="duration.set($event)"
+      type="range"
+      min="0"
+      max="1000" />
   </p>
+
   @if (duration() > 0) {
-    <app-counter [duration]="duration()" [message]="message()" />
+    <app-counter [duration]="duration()" (message)]="message()" />
   }
 </div>
