--- a/src/app/domains/shared/components/counter/counter.component.html
+++ b/src/app/domains/shared/components/counter/counter.component.html
@@ -1,2 +1,6 @@
-<p>{{ counter() }}</p>
-<p>{{ duration() }}</p>
+<p>{{ $counter() }}</p>
+<p>d: {{ $duration() }}</p>
+<p>d2: {{ $doubleDuration() }}</p>
+<hr />
+<p>{{ $message }}</p>
+<button (click)="setMessage()">set message</button>
