--- a/src/app/domains/info/pages/about/about.component.html
+++ b/src/app/domains/info/pages/about/about.component.html
@@ -19,6 +19,6 @@
   </p>
 
   @if (duration() > 0) {
-    <app-counter [duration]="duration()" (message)]="message()" />
+    <app-counter [$duration]="duration()" [$message]="message()" />
   }
 </div>
