--- a/src/app/domains/shared/components/counter/counter.component.html
+++ b/src/app/domains/shared/components/counter/counter.component.html
@@ -2,5 +2,5 @@
 <p>d: {{ $duration() }}</p>
 <p>d2: {{ $doubleDuration() }}</p>
 <hr />
-<p>{{ $message }}</p>
+<p>{{ $message() }}</p>
 <button (click)="setMessage()">set message</button>
